plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.dongyang'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
	implementation "org.springframework.boot:spring-boot-starter-validation"

	//lombok
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// spring webflux
	implementation "org.springframework.boot:spring-boot-starter-webflux"

	//jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// redis
	implementation "org.springframework.boot:spring-boot-starter-data-redis"
	implementation "org.springframework.session:spring-session-data-redis"

	// jwt
	implementation group: "io.jsonwebtoken", name: "jjwt-api", version: "0.11.2"
	implementation group: "io.jsonwebtoken", name: "jjwt-impl", version: "0.11.2"
	implementation group: "io.jsonwebtoken", name: "jjwt-jackson", version: "0.11.2"

	//mysql
	implementation 'mysql:mysql-connector-java:8.0.28'

	//gpt
	implementation 'com.theokanning.openai-gpt3-java:client:0.12.0'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// QueryDSL 설정
	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// Secret Manager
	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.3'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws-secrets-manager-config:2.2.6.RELEASE'

	// Health Check
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Bucket4j
	implementation group: 'com.github.vladimir-bukhtoyarov', name: 'bucket4j-core', version: '7.0.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
